# onboard_proj

./: Cargo.toml
res/: near_internal_demo.wasm
scripts/: build.sh  test.sh
src/: lib.rs  token.rs
